--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -75,74 +75,79 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="8L8-GF-PZR">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zkQ-U1-mhb">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOn-dm-Wdw">
-                                        <rect key="frame" x="16" y="12" width="25" height="32"/>
-                                        <state key="normal" image="cancelButton"/>
-                                        <connections>
-                                            <action selector="CancelButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="7tu-lT-FwB"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTj-5x-w2K">
-                                        <rect key="frame" x="187" y="12" width="37" height="32"/>
-                                        <state key="normal" image="swapImagesButton"/>
-                                        <connections>
-                                            <action selector="swapImageButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="RqU-vz-j2B"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHo-cf-Zad">
-                                        <rect key="frame" x="368" y="12" width="30" height="32"/>
-                                        <state key="normal" image="shareButton"/>
-                                        <connections>
-                                            <action selector="shareButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="L02-Yj-y1m"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="m2f-44-vHb"/>
-                                </constraints>
-                                <edgeInsets key="layoutMargins" top="12" left="16" bottom="16" right="16"/>
-                            </stackView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qpj-PE-9Wz">
-                                <rect key="frame" x="0.0" y="582" width="414" height="110"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="CF8-Dk-N4j"/>
-                                </constraints>
-                                <connections>
-                                    <segue destination="BZJ-cT-0Rw" kind="embed" id="pmK-ua-5nR"/>
-                                </connections>
-                            </containerView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bps-GF-H7p">
-                                <rect key="frame" x="0.0" y="60" width="414" height="522"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hu3-fH-eJk">
-                                        <rect key="frame" x="0.0" y="13" width="414" height="497"/>
-                                        <color key="backgroundColor" red="0.58280308420000004" green="0.79040464740000005" blue="0.19517801730000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="8L8-GF-PZR">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOn-dm-Wdw">
+                                                <rect key="frame" x="16" y="12" width="25" height="32"/>
+                                                <state key="normal" image="cancelButton"/>
+                                                <connections>
+                                                    <action selector="CancelButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="7tu-lT-FwB"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTj-5x-w2K">
+                                                <rect key="frame" x="187" y="12" width="37" height="32"/>
+                                                <state key="normal" image="swapImagesButton"/>
+                                                <connections>
+                                                    <action selector="swapImageButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="RqU-vz-j2B"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHo-cf-Zad">
+                                                <rect key="frame" x="368" y="12" width="30" height="32"/>
+                                                <state key="normal" image="shareButton"/>
+                                                <connections>
+                                                    <action selector="shareButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="L02-Yj-y1m"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="Hu3-fH-eJk" secondAttribute="height" multiplier="1:1.2" id="ovS-Ze-UO5"/>
+                                            <constraint firstAttribute="height" constant="60" id="m2f-44-vHb"/>
                                         </constraints>
+                                        <edgeInsets key="layoutMargins" top="12" left="16" bottom="16" right="16"/>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bps-GF-H7p">
+                                        <rect key="frame" x="0.0" y="60" width="414" height="632"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hu3-fH-eJk">
+                                                <rect key="frame" x="0.0" y="47" width="414" height="539"/>
+                                                <color key="backgroundColor" red="0.58280308420000004" green="0.79040464740000005" blue="0.19517801730000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="Hu3-fH-eJk" secondAttribute="height" multiplier="1:1.3" id="ovS-Ze-UO5"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.26836782693862915" green="0.28168493509292603" blue="0.29457771778106689" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="Hu3-fH-eJk" firstAttribute="top" secondItem="bps-GF-H7p" secondAttribute="top" id="3Ol-Mh-wlE"/>
+                                            <constraint firstAttribute="trailing" secondItem="Hu3-fH-eJk" secondAttribute="trailing" id="Jq5-T8-ibJ"/>
+                                            <constraint firstItem="Hu3-fH-eJk" firstAttribute="centerY" secondItem="bps-GF-H7p" secondAttribute="centerY" id="MfM-B7-KOU"/>
+                                            <constraint firstAttribute="bottom" secondItem="Hu3-fH-eJk" secondAttribute="bottom" id="aTk-xn-Qyn"/>
+                                            <constraint firstItem="Hu3-fH-eJk" firstAttribute="leading" secondItem="bps-GF-H7p" secondAttribute="leading" id="gGr-fp-m33"/>
+                                            <constraint firstItem="Hu3-fH-eJk" firstAttribute="width" secondItem="bps-GF-H7p" secondAttribute="width" id="qg9-QT-YMO"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="3Ol-Mh-wlE"/>
+                                                <exclude reference="aTk-xn-Qyn"/>
+                                            </mask>
+                                        </variation>
                                     </view>
+                                    <containerView hidden="YES" opaque="NO" alpha="0.0" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qpj-PE-9Wz">
+                                        <rect key="frame" x="0.0" y="692" width="414" height="0.0"/>
+                                        <connections>
+                                            <segue destination="BZJ-cT-0Rw" kind="embed" id="pmK-ua-5nR"/>
+                                        </connections>
+                                    </containerView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.26836782693862915" green="0.28168493509292603" blue="0.29457771778106689" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="top" secondItem="bps-GF-H7p" secondAttribute="top" id="3Ol-Mh-wlE"/>
-                                    <constraint firstAttribute="trailing" secondItem="Hu3-fH-eJk" secondAttribute="trailing" id="Jq5-T8-ibJ"/>
-                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="centerY" secondItem="bps-GF-H7p" secondAttribute="centerY" id="MfM-B7-KOU"/>
-                                    <constraint firstAttribute="bottom" secondItem="Hu3-fH-eJk" secondAttribute="bottom" id="aTk-xn-Qyn"/>
-                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="leading" secondItem="bps-GF-H7p" secondAttribute="leading" id="gGr-fp-m33"/>
-                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="width" secondItem="bps-GF-H7p" secondAttribute="width" id="qg9-QT-YMO"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="3Ol-Mh-wlE"/>
-                                        <exclude reference="aTk-xn-Qyn"/>
-                                    </mask>
-                                </variation>
-                            </view>
+                            </stackView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y2p-AU-EyF">
                                 <rect key="frame" x="0.0" y="692" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="L8l-m5-WDi"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Hrk-74-gZP"/>
                                     <barButtonItem image="layout_corner" id="Jxs-yj-rgW">
@@ -162,21 +167,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Qpj-PE-9Wz" firstAttribute="top" secondItem="bps-GF-H7p" secondAttribute="bottom" id="4J4-FT-dC8"/>
-                            <constraint firstItem="y2p-AU-EyF" firstAttribute="top" secondItem="Qpj-PE-9Wz" secondAttribute="bottom" id="6ZK-kS-dM1"/>
                             <constraint firstAttribute="trailing" secondItem="y2p-AU-EyF" secondAttribute="trailing" id="7Xi-JG-puQ"/>
-                            <constraint firstItem="bps-GF-H7p" firstAttribute="top" secondItem="8L8-GF-PZR" secondAttribute="bottom" id="FXN-xu-aob"/>
-                            <constraint firstItem="8L8-GF-PZR" firstAttribute="leading" secondItem="Ccv-AG-wNT" secondAttribute="leading" id="H23-S9-2t9"/>
-                            <constraint firstItem="8L8-GF-PZR" firstAttribute="top" secondItem="Ccv-AG-wNT" secondAttribute="top" id="HRn-6X-sdO"/>
-                            <constraint firstItem="bps-GF-H7p" firstAttribute="top" secondItem="8L8-GF-PZR" secondAttribute="bottom" id="N3O-q5-bHr"/>
-                            <constraint firstAttribute="trailing" secondItem="8L8-GF-PZR" secondAttribute="trailing" id="Pm1-Gc-XIu"/>
+                            <constraint firstItem="zkQ-U1-mhb" firstAttribute="top" secondItem="Ccv-AG-wNT" secondAttribute="top" id="GEX-kd-EsA"/>
+                            <constraint firstItem="zkQ-U1-mhb" firstAttribute="leading" secondItem="Ccv-AG-wNT" secondAttribute="leading" id="IWX-e7-3SK"/>
+                            <constraint firstItem="y2p-AU-EyF" firstAttribute="top" secondItem="zkQ-U1-mhb" secondAttribute="bottom" id="ImQ-dZ-n7c"/>
                             <constraint firstItem="4tb-8G-sTv" firstAttribute="top" secondItem="y2p-AU-EyF" secondAttribute="bottom" id="RJY-RG-iJ8"/>
-                            <constraint firstItem="Qpj-PE-9Wz" firstAttribute="leading" secondItem="Ccv-AG-wNT" secondAttribute="leading" id="Reu-aQ-bjF"/>
-                            <constraint firstItem="Qpj-PE-9Wz" firstAttribute="height" secondItem="Ccv-AG-wNT" secondAttribute="height" multiplier="0.15" priority="750" id="UuC-UV-w6U"/>
                             <constraint firstItem="y2p-AU-EyF" firstAttribute="leading" secondItem="Ccv-AG-wNT" secondAttribute="leading" id="Vqp-QE-HfF"/>
-                            <constraint firstAttribute="trailing" secondItem="bps-GF-H7p" secondAttribute="trailing" id="XY5-og-zql"/>
-                            <constraint firstAttribute="trailing" secondItem="Qpj-PE-9Wz" secondAttribute="trailing" id="i5c-H9-afP"/>
-                            <constraint firstItem="bps-GF-H7p" firstAttribute="leading" secondItem="Ccv-AG-wNT" secondAttribute="leading" id="r0d-RG-B18"/>
+                            <constraint firstItem="Qpj-PE-9Wz" firstAttribute="height" secondItem="Ccv-AG-wNT" secondAttribute="height" multiplier="0.15" id="Xsw-IY-Ove"/>
+                            <constraint firstAttribute="trailing" secondItem="zkQ-U1-mhb" secondAttribute="trailing" id="dLU-do-RBa"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
