--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -3,10 +3,94 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
+        <!--Page View Controller-->
+        <scene sceneID="ecF-w5-m9D">
+            <objects>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="P0D-5I-aRz" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bBs-Lp-TY7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-657" y="394"/>
+        </scene>
+        <!--Tutorial Page View Controller-->
+        <scene sceneID="Msg-NY-vBW">
+            <objects>
+                <viewController storyboardIdentifier="TutorialView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="jNn-eg-w2P" customClass="TutorialPageViewController" customModule="FlipPic" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ONK-r7-hKS"/>
+                        <viewControllerLayoutGuide type="bottom" id="H3k-LP-054"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="enn-dc-skv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L93-Ta-vwp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1325" y="1061"/>
+        </scene>
+        <!--Page Content View Controller-->
+        <scene sceneID="dzO-97-nth">
+            <objects>
+                <viewController storyboardIdentifier="PageContentViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="SOk-hL-Mox" customClass="PageContentViewController" customModule="FlipPic" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wKH-SL-9QI"/>
+                        <viewControllerLayoutGuide type="bottom" id="CAN-TM-QDu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bf1-y8-hFX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uOi-Ph-0eq">
+                                <rect key="frame" x="50" y="57" width="500" height="487"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lNt-X3-15w">
+                                <rect key="frame" x="276" y="28" width="48" height="21"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ncs-dh-ick">
+                                <rect key="frame" x="265" y="550" width="70" height="34"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                <state key="normal" title="Skip Intro">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="segue" id="5bg-u8-nVY"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="uOi-Ph-0eq" firstAttribute="centerX" secondItem="bf1-y8-hFX" secondAttribute="centerX" id="9gL-em-Oha"/>
+                            <constraint firstItem="uOi-Ph-0eq" firstAttribute="top" secondItem="lNt-X3-15w" secondAttribute="bottom" constant="8" id="ME3-Ys-rPR"/>
+                            <constraint firstItem="Ncs-dh-ick" firstAttribute="centerX" secondItem="bf1-y8-hFX" secondAttribute="centerX" id="P5T-Rb-uKX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uOi-Ph-0eq" secondAttribute="trailing" constant="30" id="YNX-za-BVi"/>
+                            <constraint firstItem="lNt-X3-15w" firstAttribute="top" secondItem="bf1-y8-hFX" secondAttribute="topMargin" constant="28" id="h8A-sG-txe"/>
+                            <constraint firstItem="uOi-Ph-0eq" firstAttribute="centerY" secondItem="bf1-y8-hFX" secondAttribute="centerY" id="hjT-lr-Qxg"/>
+                            <constraint firstItem="CAN-TM-QDu" firstAttribute="top" secondItem="uOi-Ph-0eq" secondAttribute="bottom" constant="56" id="oXj-0O-iek"/>
+                            <constraint firstItem="uOi-Ph-0eq" firstAttribute="leading" secondItem="bf1-y8-hFX" secondAttribute="leadingMargin" constant="30" id="qJN-u4-STe"/>
+                            <constraint firstItem="CAN-TM-QDu" firstAttribute="top" secondItem="Ncs-dh-ick" secondAttribute="bottom" constant="16" id="sHI-bp-T6N"/>
+                            <constraint firstItem="lNt-X3-15w" firstAttribute="centerX" secondItem="bf1-y8-hFX" secondAttribute="centerXWithinMargins" id="yXh-eV-V9K"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="uOi-Ph-0eq" id="4gA-zG-5Ym"/>
+                        <outlet property="skipIntroButton" destination="Ncs-dh-ick" id="BjV-67-Nj2"/>
+                        <outlet property="titleLabel" destination="lNt-X3-15w" id="MYd-we-hIw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qiC-xC-59V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-652" y="1061"/>
+        </scene>
         <!--Camera View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
