--- a/Reacture/Launch Screen.storyboard
+++ b/Reacture/Launch Screen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -21,43 +21,43 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="6uo-pF-A4v" userLabel="launchscreenBackground">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XEb-cq-IxG">
-                                <rect key="frame" x="105" y="75" width="389" height="447"/>
-                                <subviews>
-                                    <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenLetters" translatesAutoresizingMaskIntoConstraints="NO" id="q0r-gl-Zwr">
-                                        <rect key="frame" x="82" y="0.0" width="225" height="277"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="277" id="TCe-zd-Tcx"/>
-                                            <constraint firstAttribute="width" constant="225" id="bOe-pL-e2g"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FlipPic" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d90-iy-J9k">
-                                        <rect key="frame" x="51" y="277" width="289" height="132"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="96"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="“Your Front/Back Camera App”" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YOS-X2-iXK">
-                                        <rect key="frame" x="20" y="409" width="350" height="39"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="350" id="phk-Vu-RPW"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Italic" family="Avenir Next" pointSize="28"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="447" id="A2G-NA-MMZ"/>
-                                    <constraint firstAttribute="width" constant="389" id="gTr-js-VEh"/>
-                                </constraints>
-                            </stackView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2016 BAEPS. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
                                 <rect key="frame" x="28" y="567" width="544" height="25"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XEb-cq-IxG">
+                                <rect key="frame" x="106" y="76" width="320" height="445"/>
+                                <subviews>
+                                    <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenLetters" translatesAutoresizingMaskIntoConstraints="NO" id="q0r-gl-Zwr">
+                                        <rect key="frame" x="48" y="0.0" width="225" height="277"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="277" id="TCe-zd-Tcx"/>
+                                            <constraint firstAttribute="width" constant="225" id="bOe-pL-e2g"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="FlipPic" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d90-iy-J9k">
+                                        <rect key="frame" x="25" y="277" width="271" height="137"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="90"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="“Your Front/Back Camera App”" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YOS-X2-iXK">
+                                        <rect key="frame" x="7" y="414" width="306" height="31"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="350" id="phk-Vu-RPW"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Italic" family="Avenir Next" pointSize="22"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="445" id="A2G-NA-MMZ"/>
+                                    <constraint firstAttribute="width" constant="320" id="gTr-js-VEh"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -67,7 +67,7 @@
                             <constraint firstItem="6uo-pF-A4v" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="aP8-G8-fEn"/>
                             <constraint firstAttribute="trailing" secondItem="6uo-pF-A4v" secondAttribute="trailing" id="cbB-Ta-VwA"/>
                             <constraint firstItem="6uo-pF-A4v" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="eDU-NJ-Dur"/>
-                            <constraint firstItem="XEb-cq-IxG" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="55" id="fUa-b6-h0R"/>
+                            <constraint firstItem="XEb-cq-IxG" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" priority="250" constant="55" id="fUa-b6-h0R"/>
                             <constraint firstAttribute="trailingMargin" secondItem="obG-Y5-kRd" secondAttribute="trailing" constant="8" id="ko5-1e-bat"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="6uo-pF-A4v" secondAttribute="bottom" id="l5B-lm-DDU"/>
                             <constraint firstItem="6uo-pF-A4v" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="mMN-vx-h0K"/>
@@ -82,6 +82,6 @@
     </scenes>
     <resources>
         <image name="launchScreenBackground" width="577" height="563"/>
-        <image name="launchScreenLetters" width="225" height="277"/>
+        <image name="launchScreenLetters" width="214" height="268"/>
     </resources>
 </document>
